@@ -791,6 +791,7 @@ DatastreamSetup::DatastreamSetup(const std::string &name) : difxName(name)
 	startBand = -1;
 	nBand = 0;				// Zero implies all.
 	tSys = 0.0;
+	frameSize = 0;
 
 	filelistReadFail = false;
 }
@@ -823,6 +824,10 @@ int DatastreamSetup::setkv(const std::string &key, const std::string &value)
 		}
 
 		format = s;
+	}
+	else if(key == "frameSize")
+	{
+		ss >> frameSize;
 	}
 	else if(key == "sampling")
 	{
@@ -1096,6 +1101,11 @@ int DatastreamSetup::merge(const DatastreamSetup *dss)
 
 			return -6;
 		}
+	}
+
+	if(frameSize == 0)
+	{
+		frameSize = dss->frameSize;
 	}
 
 	return 0;
@@ -3178,6 +3188,14 @@ std::ostream& operator << (std::ostream &os, const DatastreamSetup &x)
 	{
 		os << "  networkPort=" << x.networkPort << std::endl;
 		os << "  windowSize=" << x.windowSize << std::endl;
+	}
+	if(x.frameSize != 0)
+	{
+		os << "  frameSize=" << x.frameSize << std::endl;
+	}
+	if(!x.machine.empty())
+	{
+		os << "  machine=" << x.machine << std::endl;
 	}
 
 	os << "}" << std::endl;
