@@ -169,6 +169,7 @@ public:
 	std::string format;	// Override format from .vex file.
 				// This is sometimes needed because format not known always at scheduling time
 				// Possible values: S2 VLBA MkIV/Mark4 Mark5B . Is converted to all caps on load
+	int frameSize;		// If set, a partial format override
 	std::set<int> recorderIds;	// List of recorder ids to associate with this datastream
 	enum DataSource dataSource;
 	enum SamplingType dataSampling;
