@@ -10,6 +10,8 @@ Version 2.7.0
 * Added support for CODIF format in vex files (at least, in the vex2difx parser)
 * Don't quit if unused antenna's filelist is absent
 * In ANTENNA {} now can set ds_filelist to a list of filelists, each one creating its own DATASTREAM
+* oms2v2d: some new functionality to assist VLBA eVLBI
+* vex2difx: support override of data frame size with frameSize parametr of DATASTREAM
 
 Version 2.6.0
 ~~~~~~~~~~~~~
